[dm gc] Fix red halo image in nav not showing in IE, added polyfill.io script for IE

--- a/src/assets/stylesheets/home.pcss
+++ b/src/assets/stylesheets/home.pcss
@@ -7,6 +7,7 @@
   padding: 20px 80px 0;
   background: no-repeat fixed center top var(--backgroundColor);
   overflow: hidden;
+  z-index: 2;
 
   & .nav-halo {
     position: absolute;
@@ -63,6 +64,7 @@
   padding: 0 100px;
   max-width: 1440px;
   overflow-x: hidden;
+  z-index: 1;
 }
 
 .logo {
